<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <com.shbst.kone_home.Views.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_usage_setup"
                    android:textColor="@color/lightGray"
                    android:textSize="20sp" />

                <com.shbst.kone_home.Views.FontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/floors"
                    android:textColor="@color/lightGray"
                    android:textSize="34sp" />
            </LinearLayout>

            <com.shbst.kone_home.Views.GifView
                android:id="@+id/pageTwoGif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_weight="1" />


            <com.shbst.kone_home.Views.FontTextView
                android:id="@+id/pageTwoInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="120dp"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="2dp"
                android:text="@string/gui_floor_page_text"
                android:textColor="@color/white"
                android:textSize="34sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="120dp"
            android:layout_marginTop="120dp"
            android:layout_weight="1"
            >


        <LinearLayout
            android:id="@+id/floorItemLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="60dp"
            android:orientation="vertical" />
            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:background="#404040"

                />

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>